# computer-graphics-assignment

./: .gitignore  README.md
PA0.RasterGraphics/: report.md
PA0.RasterGraphics/code/include/: element.hpp
PA1.RayCasting/student-code/include/: camera.hpp  group.hpp  material.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA1.RayCasting/student-code/src/: main.cpp
PA2.OpenGLMesh/: report.md
PA2.OpenGLMesh/code/include/: group.hpp  material.hpp  mesh.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA2.OpenGLMesh/code/src/: main.cpp
PA3.BezierSurface/: report.md
PA3.BezierSurface/code/include/: curve.hpp  group.hpp  material.hpp  mesh.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA3.BezierSurface/code/src/: main.cpp
PA4.GAN/: code.py  gan.html  report.md
rt-compact/: CMakeLists.txt  build.sh  run-test.sh
rt-compact/scenes/: cbox-ball.pbrt  cbox-glass-simple.pbrt  cbox-glass.pbrt  cbox-material.pbrt  cbox-spot.pbrt  cbox-standard.pbrt  cbox-test.pbrt  cbox-texture.pbrt  imagelight1.pbrt  imagelight2.pbrt  simple.pbrt  spotfog.pbrt  teapot.pbrt
rt-compact/scenes/vw-van/: vw-van.pbrt
rt-compact/src/accelerator/: bvh.cpp  bvh.h
rt-compact/src/camera/: camera.cpp  camera.h  film.cpp  film.h  perspective.cpp  perspective.h
rt-compact/src/core/: api.cpp  api.h  color.cpp  color.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  memory.cpp  memory.h  microfacet.cpp  microfacet.h  mipmap.h  parallel.cpp  parallel.h  primitive.cpp  primitive.h  prob.cpp  prob.h  rt_compact.h  scene.cpp  scene.h
rt-compact/src/filter/: box.cpp  box.h  filter.cpp  filter.h
rt-compact/src/integrator/: path.cpp  path.h  whitted.cpp  whitted.h
rt-compact/src/light/: diffuse.cpp  diffuse.h  distant.cpp  distant.h  infinite.cpp  infinite.h  light.cpp  light.h  point.cpp  point.h  spot.cpp  spot.h
rt-compact/src/main/: main.cpp
rt-compact/src/material/: glass.cpp  glass.h  material.cpp  material.h  matte.cpp  matte.h  metal.cpp  metal.h  mirror.cpp  mirror.h
rt-compact/src/math/: geometry.h  math.h  quaternion.cpp  quaternion.h  transform.cpp  transform.h
rt-compact/src/medium/: homogeneous.cpp  homogeneous.h  medium.cpp  medium.h
rt-compact/src/parser/: floatfile.cpp  floatfile.h  paramset.cpp  paramset.h  parser.cpp  parser.h
rt-compact/src/reflection/: reflection.cpp  reflection.h
rt-compact/src/sampler/: random.cpp  random.h  sampler.cpp  sampler.h
rt-compact/src/shape/: plymesh.cpp  plymesh.h  shape.cpp  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
rt-compact/src/texture/: checkboard.cpp  checkboard.h  constant.cpp  constant.h  imagemap.cpp  imagemap.h  texture.cpp  texture.h
rt-compact/src/util/: error.cpp  error.h  fileutil.h  imageio.cpp  imageio.h  randgen.h
